[package]
name = "dark-stealth-address"
version = "0.1.0"
edition = "2021"
description = "BN254 G1 ECDH dual-key stealth address protocol — real Diffie-Hellman on the BN254 curve"

[dependencies]
dark-groth16-core = { path = "../dark-groth16-core" }
sha2              = "0.11"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
