[package]
name = "dark-stealth-ed25519"
version = "0.1.0"
edition = "2021"
description = "ed25519 dual-key stealth addresses for NullPay — pay a .null name, funds land on a one-time NATIVE Solana ed25519 address only the recipient can spend (recipient-unlinkable, no trusted setup)"

[dependencies]
curve25519-dalek = { version = "3.2.1", default-features = false, features = ["u64_backend"] }
sha2             = "0.10"
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"

[dev-dependencies]
hex = "0.4"
